# argus-studio

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md  build_macos.command  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  release_manifest.json  requirements.txt  run_dev.command  setup_dev.command  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
app/electron/: main.ts  preload.cts  tsconfig.json
app/renderer/: index.html
app/renderer/src/: App.test.tsx  App.tsx  styles.css
app/shared/: electron.d.ts
core/argus_core/: __init__.py  database.py  demo.py  studio.py
core/argus_core/api/: server.py
core/argus_core/services/: __init__.py  dataset.py  delivery.py  experiments.py  (+2 more)
demo_data/: .argus-demo-v2  factory_walkthrough.avi  predictions.json  sample_audit.md
demo_data/dataset/: dataset.yaml
docs/: API.md  ARCHITECTURE.md  DECISIONS.md  DEMO.md  DEVELOPMENT.md  FINAL_REPORT.md  OPEN_SOURCE_RELEASE.md  PUBLISH_REPORT.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES.md
scripts/: generate_demo.py  package_macos.sh  publish_github_release.sh  security_scan.sh
tests/backend/: test_api_security.py  test_experiments_reports_db.py  test_frame_and_dataset.py  test_smoke_demo_workspace.py  test_yolo.py
tests/e2e/: electron-smoke.spec.ts  packaged-smoke.spec.ts
(+57 files in other folders)
