[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argus-core"
version = "0.1.0"
description = "Local vision core for ARGUS Studio"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.32,<1",
  "pydantic>=2.10,<3",
  "pillow>=11,<13",
  "numpy>=2,<3",
  "pandas>=2.2,<3",
  "opencv-python-headless>=4.10,<5",
  "PyYAML>=6,<7",
  "Jinja2>=3.1,<4",
  "python-multipart>=0.0.20,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "httpx>=0.28.1,<1",
  "pytest-cov>=6,<7",
  "pyinstaller>=6.11,<7"
]

[tool.setuptools]
package-dir = {"" = "core"}

[tool.setuptools.packages.find]
where = ["core"]

[tool.pytest.ini_options]
pythonpath = ["core"]
testpaths = ["tests/backend"]
addopts = "-q"
